--- a/InstaBot/InstaBot.csproj
+++ b/InstaBot/InstaBot.csproj
@@ -37,6 +37,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="PropertyChanged, Version=2.5.9.0, Culture=neutral, PublicKeyToken=ee3ee20bcf148ddd, processorArchitecture=MSIL">
       <HintPath>..\packages\PropertyChanged.Fody.2.5.9\lib\net452\PropertyChanged.dll</HintPath>
     </Reference>
@@ -64,9 +67,21 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="CredentialsHandling\Credentials.cs" />
+    <Compile Include="CredentialsHandling\CredentialsManager.cs" />
+    <Compile Include="CredentialsHandling\CredentialsRepository.cs" />
+    <Compile Include="CredentialsHandling\CredentialsWindow.xaml.cs">
+      <DependentUpon>CredentialsWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="CredentialsHandling\CredentialsWindowViewModel.cs" />
+    <Compile Include="CredentialsHandling\StringCypher.cs" />
     <Compile Include="NotifiableObject.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="TagSpecsViewModel.cs" />
+    <Page Include="CredentialsHandling\CredentialsWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
