--- a/InstaBot/InstaBot.csproj
+++ b/InstaBot/InstaBot.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>InstaBot</RootNamespace>
     <AssemblyName>InstaBot</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
@@ -16,6 +16,7 @@
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -67,22 +68,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="CredentialsHandling\Credentials.cs" />
-    <Compile Include="CredentialsHandling\CredentialsManager.cs" />
-    <Compile Include="CredentialsHandling\CredentialsRepository.cs" />
+    <Compile Include="CredentialsHandling\CredentialsManage.cs" />
     <Compile Include="CredentialsHandling\CredentialsWindow.xaml.cs">
       <DependentUpon>CredentialsWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="CredentialsHandling\CredentialsWindowViewModel.cs" />
-    <Compile Include="CredentialsHandling\StringCypher.cs" />
     <Compile Include="LikesLogger.cs" />
     <Compile Include="NotifiableObject.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="SettingsRepository.cs" />
     <Compile Include="TagSpecsViewModel.cs" />
     <Page Include="CredentialsHandling\CredentialsWindow.xaml">
-      <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -132,6 +130,12 @@
     <Content Include="chromedriver.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\InstaBotApi\InstaBotApi.csproj">
+      <Project>{984e0803-237d-4140-9c49-38dae9e49cd3}</Project>
+      <Name>InstaBotApi</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.3.1.3\build\Fody.targets" Condition="Exists('..\packages\Fody.3.1.3\build\Fody.targets')" />
