--- a/InstaBotWorker/InstaBotWorker.csproj
+++ b/InstaBotWorker/InstaBotWorker.csproj
@@ -9,5 +9,11 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.0" />
+    <PackageReference Include="Serilog" Version="2.9.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\InstaBotApi\InstaBotApi.csproj" />
   </ItemGroup>
 </Project>
