--- a/InstaBot/InstaBot.csproj
+++ b/InstaBot/InstaBot.csproj
@@ -44,6 +44,12 @@
     <Reference Include="PropertyChanged, Version=2.5.9.0, Culture=neutral, PublicKeyToken=ee3ee20bcf148ddd, processorArchitecture=MSIL">
       <HintPath>..\packages\PropertyChanged.Fody.2.5.9\lib\net452\PropertyChanged.dll</HintPath>
     </Reference>
+    <Reference Include="Serilog, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
+      <HintPath>..\packages\Serilog.2.9.0\lib\net46\Serilog.dll</HintPath>
+    </Reference>
+    <Reference Include="Serilog.Sinks.File, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
+      <HintPath>..\packages\Serilog.Sinks.File.4.1.0\lib\net45\Serilog.Sinks.File.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -74,6 +80,7 @@
     </Compile>
     <Compile Include="CredentialsHandling\CredentialsWindowViewModel.cs" />
     <Compile Include="LikesLogger.cs" />
+    <Compile Include="LoggerWrapper.cs" />
     <Compile Include="NotifiableObject.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="SettingsRepository.cs" />
