--- a/InstaBot/packages.config
+++ b/InstaBot/packages.config
@@ -4,4 +4,6 @@
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="PropertyChanged.Fody" version="2.5.9" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.14.0" targetFramework="net461" />
+  <package id="Serilog" version="2.9.0" targetFramework="net472" />
+  <package id="Serilog.Sinks.File" version="4.1.0" targetFramework="net472" />
 </packages>
